# Lambda

./: .gitignore  .mailmap  CHANGELOG.md  CMakeLists.txt  Documentation.txt  LICENSE  Makefile  README.md  SLERP_FIX.md  build.sh  build_test.sh  debug_model.sh  mdl_parser.h.deleted  run_triangle_test.sh  test.sh  test_header  test_triangles.sh  test_uv_extraction.c  tester
.ccls-cache/@Users@karlosiric@Documents@SublimeText Programming@C_Projects@ModelViewer/: build@123.c  build@123.c.blob
backup_old_code/: Makefile_old
backup_old_code/src_old/: main.c  mdl_loader.c  mdl_loader.h  mdl_reverse_engineer.c  obj_loader.h
docs/: API_REFERENCE.md  BUILD_AND_TEST.md  COMPLETION_SUMMARY.md  DEVELOPMENT_ROADMAP.md  fixed_ProcessModelForRendering.c  texture_format.txt
models/2023/: nove_convey.bsp  nove_convey.pwf  nove_convey.pxp  nove_convey.res  nove_convey.txt
models/CS16/: Read Me.txt
models/CS16/cstrike/models/: w_backpack.mdl  w_thighpack.mdl
models/CS16/cstrike/models/player/arctic/: arctic.mdl  arcticT.mdl
models/CS16/cstrike/models/player/gign/: gign.mdl  gignT.mdl
models/CS16/cstrike/models/player/gsg9/: gsg9.mdl  gsg9T.mdl
models/CS16/cstrike/models/player/guerilla/: guerilla.mdl  guerillaT.mdl
models/CS16/cstrike/models/player/leet/: leet.mdl  leetT.mdl
models/CS16/cstrike/models/player/sas/: sas.mdl  sasT.mdl
models/CS16/cstrike/models/player/terror/: terror.mdl  terrorT.mdl
models/CS16/cstrike/models/player/urban/: urban.mdl  urbanT.mdl
models/CustomTestModels/models/player/german/: german.mdl
models/[CSO]Blood Witch Bloody/: readme.txt
models/[CSO]Blood Witch Bloody/models/: buffclass25s3tr.mdl
shaders/: basic.frag  basic.vert  debug.vert  textured.frag  textured.vert
src/: debug_renderer.c  main.c  main.h  main_backup.c  main_debug.c  main_debug_tri.c  main_fixed.c  mdl_loader.c  mdl_loader.h  mdl_reverse_engineer.c  mdl_reverse_engineer.h  obj_loader.c  platform.h  renderer_fixes.c  shader.c  shader.h  studio.h  test_fixes.c  test_header.c  tester.c  version.h
src/graphics/: camera.c  camera.h  gl_platform.h  renderer.c  renderer.h  renderer_UPDATED.c  renderer_UPDATED.h  textures.c  textures.h
src/mdl/: bodypart_manager.c  bodypart_manager.h  bone_system.c  bone_system.h  mdl_animations.c  mdl_animations.h  mdl_info.c  mdl_info.h  mdl_loader.c  mdl_loader.h  mdl_loader_broken.bak  mdl_loader_safe.c  mdl_messages.c  mdl_messages.h  mdl_report.c  mdl_report.h
src/shaders/: shader.h
src/utils/: args.c  args.h  logger.c  logger.h  logger_categories.h  mdl_messages.c  mdl_messages.h  utils.c  utils.h
test_header.dSYM/Contents/: Info.plist
test_header.dSYM/Contents/Resources/DWARF/: test_header
test_header.dSYM/Contents/Resources/Relocations/aarch64/: test_header.yml
tester.dSYM/Contents/Resources/DWARF/: tester
